testsuite/tests/indexed-types/should_fail/T7786.stderr

T7786.hs:86:22: error:
    • Couldn't match type ‘xxx’ with ‘'Empty’
      Inaccessible code in
        a pattern with constructor: Nil :: forall a. Sing 'Empty,
        in a pattern binding in
             'do' block
    • In the pattern: Nil
      In the pattern: Nil :: Sing xxx
      In a stmt of a 'do' block:
        Nil :: Sing xxx <- return
                             (buryUnder (dbKeys sub) k Nil `intersectPaths` dbKeys db)

T7786.hs:86:22: error:
    • Couldn't match type ‘xxx’
                     with ‘Intersect (BuriedUnder sub k 'Empty) inv’
      Expected type: Sing xxx
        Actual type: Sing (Intersect (BuriedUnder sub k 'Empty) inv)
    • When checking that the pattern signature: Sing xxx
        fits the type of its context:
          Sing (Intersect (BuriedUnder sub k 'Empty) inv)
      In the pattern: Nil :: Sing xxx
      In a stmt of a 'do' block:
        Nil :: Sing xxx <- return
                             (buryUnder (dbKeys sub) k Nil `intersectPaths` dbKeys db)
    • Relevant bindings include
        sub :: Database sub (bound at T7786.hs:86:13)
        k :: Sing k (bound at T7786.hs:86:11)
        db :: Database inv (bound at T7786.hs:86:8)
        addSub :: Database inv
                  -> Sing k
                  -> Database sub
                  -> Maybe (Database (BuriedUnder sub k inv))
          (bound at T7786.hs:86:1)
